--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "concurrently \"npm run server\" \"vite\"",
     "server": "tsx server/index.ts",
-    "build": "vite build && tsc server/index.ts",
+    "start": "tsx server/index.ts",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.5",
@@ -33,9 +36,6 @@
     "concurrently": "^8.2.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
 }
